2.0-kripken/build/testerror.c.log
[1m../SDL-2.0.0/testerror.c:61:49: [0m[0;1;31merror: [0m[1mtoo many arguments to function call, expected 2, have 3[0m
    thread = SDL_CreateThread(ThreadFunc, NULL, "#1");
[0;1;32m             ~~~~~~~~~~~~~~~~                   ^~~~
[0m[1m/home/ngld/dev/emscripten/system/include/SDL/SDL_thread.h:141:1: [0m[0;1;30mnote: [0m'SDL_CreateThread' declared here[0m
extern DECLSPEC SDL_Thread *SDLCALL
[0;1;32m^
[0m1 error generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
